--- a/package.json
+++ b/package.json
@@ -28,33 +28,15 @@
     "d3-ease": "^1.0.5",
     "d3-format": "^1.3.2",
     "d3-quadtree": "github:bmschmidt/d3-quadtree",
-    "d3-scale": "^2.1.2"
+    "d3-scale": "^2.1.2",
+    "d3-tile": "^1.0.0"
   },
   "deprecated": false,
-  "description": "Build zoomable scatterplots with millions of points using D3",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1"
-  },
-  "homepage": "https://github.com/CreatingData/deepscatter#readme",
-  "keywords": [
-    "Data",
-    "Visualization",
-    "D3",
-    "Scatterplot"
-  ],
-  "license": "MIT",
-  "main": "index.js",
-  "name": "deepscatter",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CreatingData/deepscatter.git"
-  },
-  "scripts": {
-    "babel": "babel --presets es2015 index.js -o build/main.bundle.js",
-    "start": "http-server"
-  },
-  "version": "1.0.0"
+    "babel-preset-es2015": "^6.24.1",
+    "csv-parser": "^2.3.2",
+    "csv-stringify": "^5.3.6"
   }
 }
