better architecture to allow datasets to be passed as props to shader.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "babel": "babel --presets es2015 index.js -o build/main.bundle.js",
     "watch": "webpack-dev-server",
-    "build": "webpack",    
+    "build": "webpack",
     "start": "http-server"
   },
   "repository": {
@@ -28,10 +28,13 @@
   "dependencies": {
     "d3-array": "^1.2.4",
     "d3-ease": "^1.0.5",
+    "d3-fetch": "^1.1.2",
     "d3-format": "^1.3.2",
     "d3-quadtree": "github:bmschmidt/d3-quadtree",
     "d3-scale": "^2.1.2",
+    "d3-scale-chromatic": "^1.5.0",
     "d3-tile": "^1.0.0",
+    "d3-zoom": "^1.8.3",
     "regl": "^1.3.13",
     "string-hash": "^1.1.3"
   },
