--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
   },
   "homepage": "https://github.com/CreatingData/deepscatter#readme",
   "dependencies": {
-    "d3-selection": "^1.4.1",
     "d3-array": "^1.2.4",
+    "d3-contour": "^1.3.2",
     "d3-ease": "^1.0.5",
     "d3-fetch": "^1.1.2",
     "d3-format": "^1.3.2",
+    "d3-geo": "^1.11.9",
     "d3-quadtree": "github:bmschmidt/d3-quadtree",
     "d3-scale": "^2.1.2",
     "d3-scale-chromatic": "^1.5.0",
+    "d3-selection": "^1.4.1",
     "d3-tile": "^1.0.0",
     "d3-zoom": "^1.8.3",
+    "glur": "^1.1.2",
     "regl": "^1.3.13",
     "string-hash": "^1.1.3"
   },
