--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "d3-zoom": "^1.8.3",
     "glur": "^1.1.2",
     "regl": "^1.3.13",
-    "string-hash": "^1.1.3"
+    "string-hash": "^1.1.3",
+    "topojson": "^3.0.2",
+    "topojson-client": "^3.1.0"
   },
   "deprecated": false,
   "devDependencies": {
@@ -49,6 +51,7 @@
     "babel-preset-es2015": "^6.24.1",
     "csv-parser": "^2.3.2",
     "csv-stringify": "^5.3.6",
+    "gl-bench": "^0.3.74",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
