--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/CreatingData/deepscatter#readme",
   "dependencies": {
+    "@babel/runtime": "^7.9.6",
     "d3-array": "^1.2.4",
     "d3-contour": "^1.3.2",
     "d3-ease": "^1.0.5",
@@ -46,12 +47,14 @@
   },
   "deprecated": false,
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "csv-parser": "^2.3.2",
     "csv-stringify": "^5.3.6",
     "gl-bench": "^0.3.74",
+    "regenerator-runtime": "^0.13.5",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
