--- a/package.json
+++ b/package.json
@@ -27,21 +27,24 @@
   "homepage": "https://github.com/CreatingData/deepscatter#readme",
   "dependencies": {
     "@babel/runtime": "^7.9.6",
+    "apache-arrow": "^0.17.0",
     "d3-array": "^1.2.4",
     "d3-contour": "^1.3.2",
     "d3-ease": "^1.0.5",
     "d3-fetch": "^1.1.2",
     "d3-format": "^1.3.2",
     "d3-geo": "^1.11.9",
-    "d3-quadtree": "github:bmschmidt/d3-quadtree",
+    "d3-quadtree": "^1.0.7",
     "d3-scale": "^2.1.2",
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
     "d3-tile": "^1.0.0",
     "d3-zoom": "^1.8.3",
+    "flatbush": "^3.3.0",
     "glur": "^1.1.2",
     "regl": "^1.3.13",
     "string-hash": "^1.1.3",
+    "tinyqueue": "^2.0.3",
     "topojson": "^3.0.2",
     "topojson-client": "^3.1.0"
   },
@@ -53,6 +56,7 @@
     "babel-preset-es2015": "^6.24.1",
     "csv-parser": "^2.3.2",
     "csv-stringify": "^5.3.6",
+    "eslint-config-mourner": "^3.0.0",
     "gl-bench": "^0.3.74",
     "regenerator-runtime": "^0.13.5",
     "webpack": "^4.41.6",
