--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@babel/runtime": "^7.9.6",
     "apache-arrow": "^0.17.0",
+    "comlink": "^4.3.0",
     "d3-array": "^1.2.4",
     "d3-contour": "^1.3.2",
     "d3-ease": "^1.0.5",
@@ -58,10 +59,13 @@
     "csv-stringify": "^5.3.6",
     "eslint-config-mourner": "^3.0.0",
     "gl-bench": "^0.3.74",
+    "promise-worker": "^2.0.1",
     "regenerator-runtime": "^0.13.5",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
+    "worker-loader": "^2.0.0",
+    "worker-plugin": "^4.0.3",
     "yargs": "^15.1.0"
   }
 }
