--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/runtime": "^7.9.6",
     "apache-arrow": "^0.17.0",
     "comlink": "^4.3.0",
-    "d3-array": "^1.2.4",
+    "d3-array": "^2.4.0",
     "d3-contour": "^1.3.2",
     "d3-ease": "^1.0.5",
     "d3-fetch": "^1.1.2",
@@ -42,7 +42,12 @@
     "d3-tile": "^1.0.0",
     "d3-zoom": "^1.8.3",
     "flatbush": "^3.3.0",
+    "glsl": "0.0.1",
+    "glslify": "^7.0.0",
     "glur": "^1.1.2",
+    "lodash.merge": "^4.6.2",
+    "next-pow-2": "^1.0.0",
+    "rbush-3d": "0.0.4",
     "regl": "^1.3.13",
     "string-hash": "^1.1.3",
     "tinyqueue": "^2.0.3",
@@ -59,7 +64,9 @@
     "csv-stringify": "^5.3.6",
     "eslint-config-mourner": "^3.0.0",
     "gl-bench": "^0.3.74",
+    "glslify-loader": "^2.0.0",
     "promise-worker": "^2.0.1",
+    "raw-loader": "^4.0.1",
     "regenerator-runtime": "^0.13.5",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
