--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "d3-scale": "^2.1.2",
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.4.1",
+    "d3-svg-annotation": "^2.5.1",
     "d3-tile": "^1.0.0",
     "d3-zoom": "^1.8.3",
     "flatbush": "^3.3.0",
     "glsl": "0.0.1",
+    "glsl-easings": "^1.0.0",
     "glsl-fast-gaussian-blur": "^1.0.2",
+    "glsl-read-float": "^1.1.0",
     "glslify": "^7.0.0",
     "glur": "^1.1.2",
     "lodash.merge": "^4.6.2",
