--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "babel": "babel --presets es2015 index.js -o build/main.bundle.js",
-    "watch": "webpack-dev-server",
-    "build": "webpack",
+    "watch": "webpack-dev-server --config webpack.config.js",
+    "build": "webpack --config webpack.config.js",
     "start": "http-server"
   },
   "repository": {
@@ -53,6 +53,7 @@
     "next-pow-2": "^1.0.0",
     "rbush-3d": "0.0.4",
     "regl": "^1.3.13",
+    "regl-line": "^0.1.4",
     "string-hash": "^1.1.3",
     "tinyqueue": "^2.0.3",
     "topojson": "^3.0.2",
