--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "d3-svg-annotation": "^2.5.1",
     "d3-tile": "^1.0.0",
     "d3-zoom": "^1.8.3",
+    "earcut": "^2.2.2",
     "flatbush": "^3.3.0",
     "glsl": "0.0.1",
     "glsl-easings": "^1.0.0",
@@ -49,6 +50,7 @@
     "glsl-read-float": "^1.1.0",
     "glslify": "^7.0.0",
     "glur": "^1.1.2",
+    "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "next-pow-2": "^1.0.0",
     "rbush-3d": "0.0.4",
