--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "homepage": "https://github.com/CreatingData/deepscatter#readme",
   "dependencies": {
     "@babel/runtime": "^7.9.6",
-    "apache-arrow": "^0.17.0",
     "comlink": "^4.3.0",
     "d3-array": "^2.4.0",
     "d3-contour": "^1.3.2",
@@ -52,10 +51,8 @@
     "glur": "^1.1.2",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
-    "next-pow-2": "^1.0.0",
     "rbush-3d": "0.0.4",
     "regl": "^1.3.13",
-    "regl-line": "^0.1.4",
     "string-hash": "^1.1.3",
     "tinyqueue": "^2.0.3",
     "topojson": "^3.0.2",
@@ -63,6 +60,7 @@
   },
   "deprecated": false,
   "devDependencies": {
+    "@apache-arrow/esnext-cjs": "^3.0.0",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -75,11 +73,7 @@
     "promise-worker": "^2.0.1",
     "raw-loader": "^4.0.1",
     "regenerator-runtime": "^0.13.5",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
-    "worker-loader": "^2.0.0",
-    "worker-plugin": "^4.0.3",
     "yargs": "^15.1.0"
   }
 }
