--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "Build zoomable scatterplots with millions of points using D3",
   "main": "index.js",
   "scripts": {
-    "babel": "babel --presets es2015 index.js -o build/main.bundle.js",
-    "watch": "webpack-dev-server --config webpack.config.js",
-    "build": "webpack --config webpack.config.js",
-    "start": "http-server"
+    "serve": "webpack serve --config webpack.config.js --progress --profile",
+    "build": "webpack --env dev --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -26,21 +24,22 @@
   },
   "homepage": "https://github.com/CreatingData/deepscatter#readme",
   "dependencies": {
+    "@apache-arrow/esnext-esm": "^3.0.0",
     "@babel/runtime": "^7.9.6",
     "comlink": "^4.3.0",
     "d3-array": "^2.4.0",
-    "d3-contour": "^1.3.2",
-    "d3-ease": "^1.0.6",
-    "d3-fetch": "^1.1.2",
-    "d3-format": "^1.3.2",
-    "d3-geo": "^1.11.9",
-    "d3-quadtree": "^1.0.7",
-    "d3-scale": "^2.1.2",
-    "d3-scale-chromatic": "^1.5.0",
-    "d3-selection": "^1.4.1",
+    "d3-contour": "^2.0.0",
+    "d3-ease": "^2.0.0",
+    "d3-fetch": "^2.0.0",
+    "d3-format": "^2.0.0",
+    "d3-geo": "^2.0.1",
+    "d3-interpolate": "^2.0.1",
+    "d3-scale": "^3.2.3",
+    "d3-scale-chromatic": "^2.0.0",
+    "d3-selection": "^2.0.0",
     "d3-svg-annotation": "^2.5.1",
     "d3-tile": "^1.0.0",
-    "d3-zoom": "^1.8.3",
+    "d3-zoom": "^2.0.0",
     "earcut": "^2.2.2",
     "flatbush": "^3.3.0",
     "glsl": "0.0.1",
@@ -55,25 +54,24 @@
     "regl": "^1.3.13",
     "string-hash": "^1.1.3",
     "tinyqueue": "^2.0.3",
-    "topojson": "^3.0.2",
     "topojson-client": "^3.1.0"
   },
   "deprecated": false,
   "devDependencies": {
-    "@apache-arrow/esnext-cjs": "^3.0.0",
+    "@apache-arrow/es5-cjs": "^3.0.0",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "csv-parser": "^2.3.2",
-    "csv-stringify": "^5.3.6",
+    "babel-loader": "^8.2.2",
     "eslint-config-mourner": "^3.0.0",
-    "gl-bench": "^0.3.74",
+    "glslify-hex": "^2.1.1",
     "glslify-loader": "^2.0.0",
     "promise-worker": "^2.0.1",
     "raw-loader": "^4.0.1",
     "regenerator-runtime": "^0.13.5",
-    "webpack-dev-server": "^3.10.3",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
+    "worker-loader": "^3.0.8",
     "yargs": "^15.1.0"
   }
 }
