--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "deepscatter",
   "type": "module",
-  "version": "2.0.1",
+  "version": "2.1.0a",
   "description": "Zoomable scatterplots with billions of points",
   "files": [
     "dist"
