--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
   },
   "homepage": "https://github.com/CreatingData/deepscatter#readme",
   "dependencies": {
-    "@apache-arrow/es5-cjs": "^5.0.0",
     "comlink": "^4.3.0",
     "d3-array": "^3.1.1",
     "d3-color": "^3.0.1",
@@ -58,9 +57,11 @@
   },
   "deprecated": false,
   "devDependencies": {
+    "@playwright/test": "^1.21.1",
     "@types/d3": "^7.1.0",
     "@types/d3-geo": "^3.0.2",
     "@types/d3-selection": "^3.0.1",
+    "apache-arrow": "^7.0.0",
     "d3-scale": "^4.0.2",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -72,6 +73,6 @@
     "regl": "^2.1.0",
     "rollup-plugin-glslify": "^1.2.0",
     "rollup-plugin-web-worker-loader": "^1.6.1",
-    "vite": "^2.6.14"
+    "vite": "^2.9.6"
   }
 }
