--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "deepscatter",
   "type": "module",
-  "version": "2.2.6",
-  "description": "Zoomable scatterplots with billions of points",
+  "version": "2.3.0",
+  "description": "Fast animated zoomable scatterplots with billions of points",
   "files": [
     "dist"
   ],
@@ -35,13 +35,13 @@
   },
   "homepage": "https://github.com/CreatingData/deepscatter#readme",
   "dependencies": {
-    "comlink": "^4.3.0",
-    "d3-array": "^3.1.1",
-    "d3-color": "^3.0.1",
-    "d3-contour": "^3.0.1",
+    "comlink": "^4.3.1",
+    "d3-array": "^3.2.0",
+    "d3-color": "^3.1.0",
+    "d3-contour": "^4.0.0",
     "d3-ease": "^3.0.1",
     "d3-fetch": "^3.0.1",
-    "d3-format": "^3.0.1",
+    "d3-format": "^3.1.0",
     "d3-geo": "^3.0.1",
     "d3-interpolate": "^3.0.1",
     "d3-scale-chromatic": "^3.0.0",
@@ -57,22 +57,20 @@
   },
   "deprecated": false,
   "devDependencies": {
-    "@playwright/test": "^1.21.1",
-    "@types/d3": "^7.1.0",
+    "@playwright/test": "^1.23.1",
+    "@types/d3": "^7.4.0",
     "@types/d3-geo": "^3.0.2",
-    "@types/d3-selection": "^3.0.1",
-    "apache-arrow": "^7.0.0",
+    "@types/d3-selection": "^3.0.2",
+    "apache-arrow": "^8.0.0",
+    "d3-random": "^3.0.1",
     "d3-scale": "^4.0.2",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-mourner": "^3.0.0",
-    "eslint-plugin-import": "^2.23.4",
-    "glslify": "^7.0.0",
+    "eslint": "^8.19.0",
+    "glslify": "^7.1.1",
     "glslify-hex": "^2.1.1",
     "glslify-loader": "^2.0.0",
     "regl": "^2.1.0",
-    "rollup-plugin-glslify": "^1.2.0",
+    "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-web-worker-loader": "^1.6.1",
-    "vite": "^2.9.6"
+    "vite": "^2.9.13"
   }
 }
