--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/CreatingData/deepscatter#readme",
   "dependencies": {
+    "apache-arrow": "^8.0.0",
     "comlink": "^4.3.1",
     "d3-array": "^3.2.0",
     "d3-color": "^3.1.0",
@@ -44,6 +45,8 @@
     "d3-format": "^3.1.0",
     "d3-geo": "^3.0.1",
     "d3-interpolate": "^3.0.1",
+    "d3-random": "^3.0.1",
+    "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "d3-timer": "^3.0.1",
@@ -53,7 +56,8 @@
     "glsl-fast-gaussian-blur": "^1.0.2",
     "glsl-read-float": "^1.1.0",
     "lodash-es": "^4.17.21",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "regl": "^2.1.0"
   },
   "deprecated": false,
   "devDependencies": {
@@ -61,14 +65,11 @@
     "@types/d3": "^7.4.0",
     "@types/d3-geo": "^3.0.2",
     "@types/d3-selection": "^3.0.2",
-    "apache-arrow": "^8.0.0",
-    "d3-random": "^3.0.1",
-    "d3-scale": "^4.0.2",
+    "@types/lodash.merge": "^4.6.7",
     "eslint": "^8.19.0",
     "glslify": "^7.1.1",
     "glslify-hex": "^2.1.1",
     "glslify-loader": "^2.0.0",
-    "regl": "^2.1.0",
     "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-web-worker-loader": "^1.6.1",
     "vite": "^2.9.13"
