--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.19.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-unicorn": "^43.0.2",
     "glslify": "^7.1.1",
     "glslify-hex": "^2.1.1",
     "glslify-loader": "^2.0.0",
