--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,7 @@
         "semi": "off",
         "@typescript-eslint/indent": ["error", 2],
         "@typescript-eslint/quotes": ["error", "single"],
-        "@typescript-eslint/semi": ["error", "never"],
+        "@typescript-eslint/semi": ["error", "always"],
         "@typescript-eslint/object-curly-spacing": ["error", "always"],
 
         // NOTE: The below rules violate best practices and allow for code
