--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "glslify-loader": "^2.0.0",
     "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-web-worker-loader": "^1.6.1",
+    "terser": "^5.14.2",
     "vite": "^3.0.5"
   }
 }
