--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,7 @@
         "semi": "off",
         "@typescript-eslint/indent": ["error", 2],
         "@typescript-eslint/quotes": ["error", "single"],
-        "@typescript-eslint/semi": ["error", "never"],
+        "@typescript-eslint/semi": ["error", "always"],
         "@typescript-eslint/object-curly-spacing": ["error", "always"],
 
         // Import plugin rules
