--- a/.eslintrc
+++ b/.eslintrc
@@ -53,6 +53,7 @@
         "unicorn/consistent-destructuring": "off",
         "unicorn/new-for-builtins": "off",
         "unicorn/prevent-abbreviations": "off",
+        "unicorn/no-null": "off",
 
         // NOTE: The below rules violate best practices and allow for code
         // debt and should be removed.
