--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ dist/tiles
 test-results/
 playwright-report/
 dist/tiles/*
+
+# quadfeather-test-data and quadfeather output
+_deepscatter_tmp
+/tiles
+tmp.csv
