--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dev": "vite --port 3000",
     "build": "vite build",
     "test": "playwright test",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "typecheck": "tsc --noEmit --pretty"
   },
   "repository": {
     "type": "git",
@@ -78,6 +79,7 @@
     "rollup-plugin-glslify": "^1.3.0",
     "rollup-plugin-web-worker-loader": "^1.6.1",
     "terser": "^5.14.2",
+    "typescript": "^4.7.4",
     "vite": "^3.0.5"
   }
 }
