chore: add ts resolver for eslint import plugin

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,9 @@
         "sourceType": "module",
         "project": "tsconfig.json"
     },
+    "settings":{ 
+        "import/resolver": "typescript"
+    },
     "ignorePatterns": [
         "**/dist/**",
         "**/demo/**",
