--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "d3-array": "^3.2.0",
     "d3-color": "^3.1.0",
     "d3-contour": "^4.0.0",
+    "d3-drag": "^3.0.0",
     "d3-ease": "^3.0.1",
     "d3-fetch": "^3.0.1",
     "d3-format": "^3.1.0",
@@ -64,6 +65,7 @@
   "devDependencies": {
     "@playwright/test": "^1.25.0",
     "@types/d3": "^7.4.0",
+    "@types/d3-drag": "^3.0.1",
     "@types/d3-geo": "^3.0.2",
     "@types/d3-selection": "^3.0.3",
     "@types/lodash.merge": "^4.6.7",
