Add a "npm run dev-simple" command & documentation for the new sample html file

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "dev": "vite --port 3344",
+    "dev-simple": "vite --port 3344 --mode simple",
     "build": "vite build",
     "test": "playwright test",
     "lint": "eslint src"
