--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "@typescript-eslint/parser": "^5.44.0",
     "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-formatter-summary-chart": "^0.2.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unicorn": "^45.0.0",
     "glslify": "^7.1.1",
     "glslify-hex": "^2.1.1",
