--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,10 @@
 {
-  "extends": [
-    "plugin:@typescript-eslint/recommended",
-    "plugin:unicorn/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "plugins": [
     "@typescript-eslint",
     "import",
-    "unicorn"
-    // TODO: add prettier
+    "unicorn",
+    "prettier"
   ],
   "env": {
     "browser": true,
@@ -18,18 +15,15 @@
     "sourceType": "module",
     "project": "tsconfig.json"
   },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
+    }
+  },
   "ignorePatterns": ["**/dist/**", "**/demo/**", "**/public/**"],
   "rules": {
-    // Base ESLint rules that @typescript-eslint extends must be disabled
-    // for the extended rules to work. See the below link for info.
-    // https://github.com/typescript-eslint/typescript-eslint/blob/main/docs/linting/TROUBLESHOOTING.md#i-am-using-a-rule-from-eslint-core-and-it-doesnt-work-correctly-with-typescript-code
-    "indent": "off",
-    "quotes": "off",
-    "semi": "off",
-    "@typescript-eslint/indent": ["error", 2],
-    "@typescript-eslint/quotes": ["error", "single"],
-    "@typescript-eslint/semi": ["error", "always"],
-    "@typescript-eslint/object-curly-spacing": ["error", "always"],
 
     // Import plugin rules
     // https://github.com/import-js/eslint-plugin-import
