add foreground/background aesthetic

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dev": "vite --port 3344 --host",
     "format": "prettier --write .",
     "build": "vite build",
-    "prepublishOnly": "vite build && && typedoc --skipErrorChecking src/deepscatter.ts",
+    "prepublishOnly": "vite build && typedoc --skipErrorChecking src/deepscatter.ts",
     "test": "playwright test",
     "lint": "eslint src"
   },
