type fixes, attempt to use nomic client if supplied

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,12 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "plugins": ["@typescript-eslint", "import", "unicorn", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "import",
+    "unicorn",
+    "prettier"
+  ],
   "env": {
     "browser": true,
     "es6": true
@@ -17,11 +22,20 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        "extensions": [
+          ".js",
+          ".jsx",
+          ".ts",
+          ".tsx"
+        ]
       }
     }
   },
-  "ignorePatterns": ["**/dist/**", "**/demo/**", "**/public/**"],
+  "ignorePatterns": [
+    "**/dist/**",
+    "**/demo/**",
+    "**/public/**"
+  ],
   "rules": {
     // Import plugin rules
     // https://github.com/import-js/eslint-plugin-import
@@ -29,7 +43,6 @@
     "import/export": "warn",
     "import/no-nodejs-modules": "warn", // Deepscatter runs on the browser
     "import/no-default-export": "warn", // default exports are an antipattern
-
     // Unicorn plugin rules
     // https://github.com/sindresorhus/eslint-plugin-unicorn
     "unicorn/filename-case": [
@@ -45,14 +58,15 @@
     "unicorn/new-for-builtins": "off",
     "unicorn/prevent-abbreviations": "off",
     "unicorn/no-null": "off",
-
     // NOTE: The below rules violate best practices and allow for code
     // debt and should be removed.
     "camelcase": "off"
   },
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "extends": [
         "plugin:@typescript-eslint/recommended-requiring-type-checking"
       ]
