--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "url": "https://github.com/nomic-ai/deepscatter/issues"
   },
   "homepage": "https://github.com/nomic-ai/deepscatter#readme",
+  "peerDependencies": {
+    "apache-arrow": "^12.0.1"
+  },
   "dependencies": {
-    "apache-arrow": "^11.0.0",
     "d3-array": "^3.2.2",
     "d3-color": "^3.1.0",
     "d3-contour": "^4.0.2",
@@ -71,6 +73,7 @@
     "@types/d3-selection": "^3.0.4",
     "@types/geojson": "^7946.0.10",
     "@types/lodash.merge": "^4.6.7",
+    "apache-arrow": "^12.0.1",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.36.0",
