--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "homepage": "https://github.com/nomic-ai/deepscatter#readme",
   "peerDependencies": {
-    "apache-arrow": "13.0.0"
+    "apache-arrow": "^8.0.0"
   },
   "dependencies": {
     "d3-array": "^3.2.2",
