--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     }
   },
   "scripts": {
-    "dev": "vite --port 3344 --host",
+    "dev": "vite --mode dev --port 3344 --host",
     "format": "prettier --write src",
     "build": "vite build && tsc || true",
     "prepublishOnly": "vite build && tsc || true && typedoc --skipErrorChecking src/*",
@@ -44,7 +44,7 @@
     "apache-arrow": "^8.0.0"
   },
   "dependencies": {
-    "d3-array": "^3.2.2",
+    "d3-array": "^3.2.4",
     "d3-color": "^3.1.0",
     "d3-contour": "^4.0.2",
     "d3-ease": "^3.0.1",
@@ -59,7 +59,6 @@
     "d3-timer": "^3.0.1",
     "d3-transition": "^3.0.1",
     "d3-zoom": "^3.0.0",
-    "deepscatter": "^2.14.0",
     "glsl-easings": "^1.0.0",
     "glsl-fast-gaussian-blur": "^1.0.2",
     "glsl-read-float": "^1.1.0",
@@ -68,27 +67,29 @@
     "regl": "^2.1.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.31.2",
-    "@types/d3": "^7.4.0",
-    "@types/d3-geo": "^3.0.3",
-    "@types/d3-selection": "^3.0.4",
-    "@types/geojson": "^7946.0.10",
-    "@types/lodash.merge": "^4.6.7",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "apache-arrow": "13.0.0",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "@playwright/test": "^1.41.2",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@types/d3": "^7.4.3",
+    "@types/d3-geo": "^3.1.0",
+    "@types/d3-selection": "^3.0.10",
+    "@types/geojson": "^7946.0.14",
+    "@types/lodash.merge": "^4.6.9",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "apache-arrow": "15.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-formatter-summary-chart": "^0.3.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unicorn": "^46.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-unicorn": "^51.0.1",
     "glslify": "^7.1.1",
     "glslify-hex": "^2.1.1",
     "glslify-loader": "^2.0.0",
     "rollup-plugin-glslify": "^1.3.1",
-    "terser": "^5.16.6",
-    "typedoc": "^0.23.26",
-    "vite": "^4.1.4"
+    "svelte": "^4.2.12",
+    "terser": "^5.28.1",
+    "typedoc": "^0.25.8",
+    "vite": "^5.1.4"
   }
 }
