mouseover, test pages

--- a/package.json
+++ b/package.json
@@ -48,9 +48,7 @@
     "d3-color": "^3.1.0",
     "d3-contour": "^4.0.2",
     "d3-ease": "^3.0.1",
-    "d3-fetch": "^3.0.1",
     "d3-format": "^3.1.0",
-    "d3-geo": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "d3-random": "^3.0.1",
     "d3-scale": "^4.0.2",
@@ -59,9 +57,11 @@
     "d3-timer": "^3.0.1",
     "d3-transition": "^3.0.1",
     "d3-zoom": "^3.0.0",
+    "fast-json-stable-stringify": "^2.1.0",
     "glsl-easings": "^1.0.0",
     "glsl-fast-gaussian-blur": "^1.0.2",
     "glsl-read-float": "^1.1.0",
+    "json-stable-stringify": "^1.1.1",
     "lodash.merge": "^4.6.2",
     "rbush-3d": "^0.0.4",
     "regl": "^2.1.0"
