--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,9 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "noUnusedLocals": true,
+    "experimentalDecorators": true,
     "sourceMap": true,
-    "strict": true,
+    "strict": false,
     "target": "es2020",
     "isolatedModules": true,
     "outDir": "./dist",
