--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "noUnusedLocals": true,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "strict": false,
+    "strict": true,
     "target": "es2020",
     "isolatedModules": true,
     "outDir": "./dist",
