--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "vite build && tsc",
     "prepublishOnly": "vite build && tsc && typedoc --skipErrorChecking src/*",
     "test": "playwright test",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "docs": "typedoc --out docs src/deepscatter.ts"
   },
   "repository": {
     "type": "git",
@@ -88,7 +89,7 @@
     "svelte": "^4.2.12",
     "terser": "^5.28.1",
     "typedoc": "^0.25.8",
-    "typescript": "^5.4.3",
+    "typescript": "^5.3.3",
     "vite": "^5.1.4"
   }
 }
