--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "terser": "^5.28.1",
     "typedoc": "^0.25.8",
     "typescript": "^5.3.3",
+    "uvu": "^0.5.6",
     "vite": "^5.1.4"
   }
 }
