--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@types/d3": "^7.4.3",
     "@types/d3-geo": "^3.1.0",
+    "@types/d3-scale-chromatic": "^3.0.3",
     "@types/d3-selection": "^3.0.10",
     "@types/geojson": "^7946.0.14",
     "@types/lodash.merge": "^4.6.9",
