--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "homepage": "https://github.com/nomic-ai/deepscatter#readme",
   "peerDependencies": {
-    "apache-arrow": ">=11.0.0 <17.0.0"
+    "apache-arrow": ">=11.0.0"
   },
   "dependencies": {
     "d3-array": "^3.2.4",
