--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "typedoc": "^0.26.6",
     "typescript": "^5.5.4",
     "uvu": "^0.5.6",
-    "vite": "^5.4.3"
+    "vite": "^5.4.3",
+    "vitest": "^2.1.4"
   }
 }
