--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "lib": ["DOM"],
+    "types": ["@webgpu/types"],
     "noEmitOnError": true,
     "emitDeclarationOnly": true
   },
